--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -1,55 +1,34 @@
 .navbar{
     background-color: #cccc;
     position: fixed;
-    display: flex;
+    /* display: flex; */
+    display: inline-flex;
     width: 100vw;
-   
+    justify-content: space-between;
     
     
+}
+.link-box{
+    margin-right: 10px;
 }
 .navbar-brand{
     color: white;
     display: flex;
-    
-
-    /* align-items: center;
-    align-content: center; */
     flex-direction: row;
-    
    
 }
 
  .nav-item{
- /* background-color: #cccc; */
  color: white;
- /* display: flex; */
  display: inline-flex;
- /* flex-direction: row; */
-
-/* justify-content: space-around; */
 } 
-
-.link-box{
-    display: flex;
-   justify-content: flex-end;
-   margin-left: 550px;
-   margin-top: 6px
-}
 
 .nav-link{
     color: white;
     font-weight: 800;
     margin: 10px;
+    
 }
-
-/* .logo-container{
-    display: flex;
-
-    justify-content: space-between;  
-    width: 20%;
-    align-items: center;
-    align-content: center;
-} */
 
 .logo-container img{
     margin-left: 10px;
@@ -63,48 +42,3 @@
     font-weight: 800;
 }
 
-.nav-btn{
-    background-color: blue;
-    color: white;
-    height: 30px;
-    width: 110px;
-    font-weight: 800;
-    border-radius: 15px 15px 15px 15px;
-}
-
-#garmin{
-    background-image: url('../../pictures/garmin.png');
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: contain;;
-    background-repeat: no-repeat;
-   
-}
-
-#simrad{
-    background-image: url('../../pictures/simrad.png');
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;;
-    background-color: black;
-}
-#furuno{
-    background-image: url('../../pictures/furuno.webp');
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: contain;;
-    background-repeat: no-repeat;
-    /* background-color: black; */
-}
-#raymarine{
-    background-image: url('../../pictures/raymarine.jpeg');
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;;
-    background-repeat: no-repeat;
-    /* background-color: black; */
-}
